--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,7 +2,10 @@
 
 //Font-sizes
 $fonts: (
-    links: 14px
+    links: 14px,
+    title-section: 30px,
+    service-item-title: 22px,
+    service-item-description: 16px
 );
 
 *{
@@ -18,13 +21,25 @@ body{
     padding-right: 30px;
 }
 
+.services{
+    background: var(--gradient-supersoft, linear-gradient(229deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%));
+}
+
+.services-bloc{
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
+}
+
 .title-bloc{
     display: flex;
     flex-direction: column;
     row-gap: 10px;
 
     .title-link{
-        width: fit-content;
+        display: flex;
+        align-items: center;
+        column-gap: 2px;
         text-decoration: none;
         font-size: map-get($fonts, links);
         color:  #24A3FF;
@@ -33,11 +48,74 @@ body{
         letter-spacing: 1px;
         text-transform: uppercase;
 
-        &-::after{
+        &::after{
             content: '';
-            background-image: url(../images/Arrow-right.svg)  no-repeat;
+            margin: 0;
+            background: url(../images/Arrow-right.svg) no-repeat;
+            background-position: center;
             width: 12px;
             height: 12px;
         }
     }
+
+    .title-text{
+        margin: 0;
+        font-size: map-get($fonts, title-section);
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        background: var(--gradient-red-text, linear-gradient(90deg, #F0145A 0.84%, #EF8080 99.96%));
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+}
+
+.services-menu{
+
+}
+
+.service-item{
+display: flex;
+flex-direction: column;
+row-gap: 30px;
+
+    &-image{
+        width: fit-content;
+        padding: 14px;
+        font-size: 0;
+        display: inline-block;
+        border-radius: 24px;
+        background: var(--basic-white, #FFF);
+
+        img{
+            width: 64px;
+            height: 64px;
+        }
+    }
+
+    &-text{
+        display: flex;
+        flex-direction: column;
+        row-gap: 15px;
+
+        .service-item-title{
+            margin: 0;
+            font-size: map-get($fonts, service-item-title);
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+            color: var(--active-regular, #24A3FF);
+        }
+
+        .service-item-description{
+            margin: 0;
+            color: var(--basic-white, #FFF);
+            font-size: map-get($fonts, service-item-description);
+            font-style: normal;
+            font-weight: 400;
+            line-height: 26px; 
+        }
+    }
+  
 }
