--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,6 @@
 @use 'sass:map';
+@use 'mixins';
+
 
 //Font-sizes
 $fonts: (
@@ -16,19 +18,19 @@ body{
     font-family: 'Montserrat', Arial, sans-serif;
 }
 
-.wrapper{
-    padding-left: 30px;
-    padding-right: 30px;
-}
-
 .services{
     background: var(--gradient-supersoft, linear-gradient(229deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%));
-}
 
-.services-bloc{
-    display: flex;
-    flex-direction: column;
-    row-gap: 30px;
+    .wrapper{
+        padding-left: 30px;
+        padding-right: 30px;
+
+        .services-bloc{
+            display: flex;
+            flex-direction: column;
+            row-gap: 30px;
+        }
+    }   
 }
 
 .title-bloc{
@@ -49,12 +51,7 @@ body{
         text-transform: uppercase;
 
         &::after{
-            content: '';
-            margin: 0;
-            background: url(../images/Arrow-right.svg) no-repeat;
-            background-position: center;
-            width: 12px;
-            height: 12px;
+            @include mixins.iconArrow("../images/Arrow-right.svg", 12px, 12px)
         }
     }
 
@@ -72,6 +69,9 @@ body{
 }
 
 .services-menu{
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 30px;
 
 }
 
@@ -80,19 +80,7 @@ display: flex;
 flex-direction: column;
 row-gap: 30px;
 
-    &-image{
-        width: fit-content;
-        padding: 14px;
-        font-size: 0;
-        display: inline-block;
-        border-radius: 24px;
-        background: var(--basic-white, #FFF);
-
-        img{
-            width: 64px;
-            height: 64px;
-        }
-    }
+    @include mixins.iconService;
 
     &-text{
         display: flex;
@@ -117,5 +105,4 @@ row-gap: 30px;
             line-height: 26px; 
         }
     }
-  
 }
