--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,20 +18,48 @@ body{
     font-family: 'Montserrat', Arial, sans-serif;
 }
 
+
 .services{
-    background: var(--gradient-supersoft, linear-gradient(229deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%));
+    position: relative;
+    padding-top: 30px;
+    padding-bottom: 60px;
+    border-radius: 0px 0px 12px 12px;
+    background: var(--gradient-supersoft, linear-gradient(229deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%)) no-repeat;
 
-    .wrapper{
-        padding-left: 30px;
-        padding-right: 30px;
+    &::after{
+        content: '';
+        position: absolute;
+        left: 20px;
+        right: 20px;
+        bottom: -10px;
+        height: 10px;
+        border-radius: 0px 0px 12px 12px;
+        background: #CACADB;
+    }
 
-        .services-bloc{
-            display: flex;
-            flex-direction: column;
-            row-gap: 30px;
-        }
-    }   
+    &::before{
+        content: '';
+        position: absolute;
+        left: 40px;
+        right: 40px;
+        bottom: -20px;
+        height: 10px;
+        border-radius: 0px 0px 12px 12px;
+        background: #E7E7F2;
+    }
 }
+
+.wrapper{
+    padding-left: 30px;
+    padding-right: 30px;
+
+    .services-bloc{
+        display: flex;
+        flex-direction: column;
+        row-gap: 30px;
+    }
+}   
+
 
 .title-bloc{
     display: flex;
