--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,14 +1,5 @@
-@use 'sass:map';
 @use 'mixins';
 
-
-//Font-sizes
-$fonts: (
-    links: 14px,
-    title-section: 30px,
-    service-item-title: 22px,
-    service-item-description: 16px
-);
 
 *{
     box-sizing: border-box;
@@ -18,10 +9,8 @@ body{
     font-family: 'Montserrat', Arial, sans-serif;
 }
 
-
 .services{
     position: relative;
-    padding-top: 30px;
     padding-bottom: 60px;
     border-radius: 0px 0px 12px 12px;
     background: var(--gradient-supersoft, linear-gradient(229deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%)) no-repeat;
@@ -56,7 +45,7 @@ body{
     .services-bloc{
         display: flex;
         flex-direction: column;
-        row-gap: 30px;
+        row-gap: 60px;
     }
 }   
 
@@ -71,7 +60,7 @@ body{
         align-items: center;
         column-gap: 2px;
         text-decoration: none;
-        font-size: map-get($fonts, links);
+        font-size: 14px;
         color:  #24A3FF;
         font-weight: 700;
         line-height: normal;
@@ -79,13 +68,18 @@ body{
         text-transform: uppercase;
 
         &::after{
-            @include mixins.iconArrow("../images/Arrow-right.svg", 12px, 12px)
+            content: '';
+            margin: 0;
+            background: url(../images/Arrow-right.svg);
+            background-position: center;
+            width: 12px;
+            height: 12px;
         }
     }
 
     .title-text{
         margin: 0;
-        font-size: map-get($fonts, title-section);
+        font-size: 30px;
         font-style: normal;
         font-weight: 700;
         line-height: normal;
@@ -100,13 +94,13 @@ body{
     display: flex;
     flex-wrap: wrap;
     row-gap: 30px;
-
 }
 
 .service-item{
 display: flex;
 flex-direction: column;
 row-gap: 30px;
+width: 100%;
 
     @include mixins.iconService;
 
@@ -117,7 +111,7 @@ row-gap: 30px;
 
         .service-item-title{
             margin: 0;
-            font-size: map-get($fonts, service-item-title);
+            font-size: 22px;
             font-style: normal;
             font-weight: 700;
             line-height: normal;
@@ -127,10 +121,59 @@ row-gap: 30px;
         .service-item-description{
             margin: 0;
             color: var(--basic-white, #FFF);
-            font-size: map-get($fonts, service-item-description);
+            font-size: 16px;
             font-style: normal;
             font-weight: 400;
             line-height: 26px; 
         }
     }
+}
+
+@media (min-width: 768px) {
+    .wrapper{
+        padding-left: 60px;
+        padding-right: 60px;
+    
+        .services-bloc{
+            row-gap: 60px;
+        }
+    }
+
+    .services-menu{
+        row-gap: 60px;
+        column-gap: 60px;
+
+        .service-item{
+            width: calc(50% - 30px);
+        }
+    }
+
+    .title-bloc{
+        .title-text{
+            font-size: 38px;
+        }
+    }
+}
+
+@media(min-width: 1024px) {
+    .services-menu{
+        .service-item{
+            width: calc(33.33% - 40px);
+        }
+    }
+}
+
+@media(min-width: 1920px) {
+    .wrapper{
+        padding-left: 160px;
+        padding-right: 160px;
+
+        .title-link {
+            color: var(--Accent, #F0145A);
+
+            &::after{
+                background: url(../images/Arrow2.svg);
+            }
+        }
+    }   
 }
