--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -14,3 +14,9 @@
     }
 }
 
+@mixin imageCenter {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
