section partners, sectiom services - done (2)

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,6 @@
 .services {
   position: relative;
   padding-bottom: 60px;
-  border-radius: 0px 0px 12px 12px;
-  background: linear-gradient(229deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%) no-repeat;
 }
 .services::after {
   content: "";
@@ -357,10 +355,22 @@ body {
   font-family: "Montserrat", Arial, sans-serif;
 }
 
+.homepage {
+  border-radius: 0px 0px 12px 12px;
+  background: linear-gradient(229deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%) no-repeat;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
 .some-content {
   height: 500px;
   text-align: center;
   padding: 100px 0;
+  margin: 0;
+}
+.some-content p {
+  margin: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
