--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,10 +11,23 @@ body{
     font-family: 'Montserrat', Arial, sans-serif;
 }
 
+.homepage{
+    border-radius: 0px 0px 12px 12px;
+    background: linear-gradient(229deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%) no-repeat;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
 //Just some content till I do my next home task 
 .some-content{
     height: 500px;
     text-align: center;
     padding: 100px 0;
+    margin: 0;
+
+    p{
+        margin: 0;
+    }
 }
 
