--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@
 }
 .service-item-text .service-item-description {
   margin: 0;
-  color: #FFF;
+  color: #FFFFFF;
   font-size: 16px;
   font-weight: 400;
   line-height: 26px;
@@ -143,10 +143,10 @@
     margin-left: auto;
     margin-right: auto;
   }
-  .wrapper .title-link {
+  .wrapper .red {
     color: #F0145A;
   }
-  .wrapper .title-link::after {
+  .wrapper .red::after {
     background: url(../images/Arrow2.svg);
   }
 }
@@ -325,7 +325,7 @@
   .partners-menu a {
     width: 33.33%;
   }
-  .partners-menu a:nth-child(n) {
+  .partners-menu a:nth-child(n+7) {
     display: inline-block;
   }
 }
@@ -347,6 +347,102 @@
     overflow: hidden;
   }
 }
+.team {
+  padding-top: 50px;
+  padding-bottom: 60px;
+}
+.team .slide-team {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+}
+
+.team-member {
+  background: #F5F5FA;
+  border-radius: 12px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+.team-member .photo-container {
+  font-size: 0;
+}
+.team-member .photo-container img {
+  width: 100%;
+  object-fit: cover;
+  background-color: #EDEDF7;
+  height: 500px;
+}
+.team-member .slide-description {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding: 30px;
+}
+.team-member .team-member-text {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+.team-member .team-member-text .member-name {
+  color: #B3B3BA;
+  font-size: 16px;
+  font-weight: 700;
+  margin: 0;
+}
+.team-member .team-member-text .member-position {
+  color: #B3B3BA;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  margin: 0;
+}
+
+.slide-menu {
+  display: flex;
+  gap: 15px;
+}
+.slide-menu button {
+  content: "";
+  width: 16px;
+  height: 16px;
+  background-color: #24A3FF;
+  border: none;
+  border-radius: 50px;
+  opacity: 0.2;
+}
+.slide-menu .active-ellipsis {
+  opacity: 1;
+}
+
+@media (min-width: 768px) {
+  .wrapper {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+  .title-text {
+    font-size: 38px;
+  }
+}
+@media (min-width: 1024px) {
+  .team-member {
+    flex-direction: row;
+  }
+  .team-member .photo-container img {
+    width: 400px;
+    height: 100%;
+  }
+}
+@media (min-width: 1920px) {
+  .wrapper {
+    padding-left: 160px;
+    padding-right: 160px;
+    width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 * {
   box-sizing: border-box;
 }
@@ -361,16 +457,6 @@ body {
   display: flex;
   flex-direction: column;
   gap: 30px;
-}
-
-.some-content {
-  height: 500px;
-  text-align: center;
-  padding: 100px 0;
-  margin: 0;
-}
-.some-content p {
-  margin: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
