--- a/sass/_section-services.scss
+++ b/sass/_section-services.scss
@@ -104,7 +104,7 @@ width: 100%;
 
         .service-item-description{
             margin: 0;
-            color:  #FFF;
+            color: #FFFFFF;
             font-size: 16px;
             font-weight: 400;
             line-height: 26px; 
@@ -154,7 +154,7 @@ width: 100%;
         margin-left: auto;
         margin-right: auto;
 
-        .title-link {
+        .red {
             color:  #F0145A;
 
             &::after{
