--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,19 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Montserrat", Arial, sans-serif;
+}
+
+.homepage {
+  border-radius: 0px 0px 12px 12px;
+  background: linear-gradient(229deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%) no-repeat;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
 .services {
   position: relative;
   padding-bottom: 60px;
@@ -137,8 +153,7 @@
 }
 @media (min-width: 1920px) {
   .wrapper {
-    padding-left: 160px;
-    padding-right: 160px;
+    padding: 0;
     width: 1600px;
     margin-left: auto;
     margin-right: auto;
@@ -335,14 +350,13 @@
   }
 }
 @media (min-width: 1920px) {
-  .wrapper-partners {
-    padding-left: 100px;
-    padding-right: 100px;
+  .partners .wrapper-partners {
+    padding: 0;
     width: 1720px;
     margin-left: auto;
     margin-right: auto;
   }
-  .wrapper-partners .partners-menu {
+  .partners .wrapper-partners .partners-menu {
     border-radius: 12px;
     overflow: hidden;
   }
@@ -417,11 +431,14 @@
 }
 
 @media (min-width: 768px) {
-  .wrapper {
+  .team {
+    padding-top: 80px;
+  }
+  .team .wrapper {
     padding-left: 60px;
     padding-right: 60px;
   }
-  .title-text {
+  .team .wrapper .title-text {
     font-size: 38px;
   }
 }
@@ -435,28 +452,12 @@
   }
 }
 @media (min-width: 1920px) {
-  .wrapper {
-    padding-left: 160px;
-    padding-right: 160px;
+  .team .wrapper {
+    padding: 0;
     width: 1600px;
     margin-left: auto;
     margin-right: auto;
   }
-}
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Montserrat", Arial, sans-serif;
-}
-
-.homepage {
-  border-radius: 0px 0px 12px 12px;
-  background: linear-gradient(229deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%) no-repeat;
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
 }
 
 /*# sourceMappingURL=style.css.map */
