--- a/sass/_section-partners.scss
+++ b/sass/_section-partners.scss
@@ -1,3 +1,5 @@
+@use 'mixins';
+
 .wrapper-partners{
     margin: 0;
 }
@@ -182,16 +184,17 @@
 };
 
 @media(min-width: 1920px){
-    .wrapper-partners{
-        padding-left: 100px;
-        padding-right: 100px;
-        width: 1720px;
-        margin-left: auto;
-        margin-right: auto;
-
-        .partners-menu{
-            border-radius: 12px;
-            overflow: hidden;
+    .partners{
+        .wrapper-partners{
+            padding: 0;
+            width: 1720px;
+            margin-left: auto;
+            margin-right: auto;
+    
+            .partners-menu{
+                border-radius: 12px;
+                overflow: hidden;
+            }
         }
     }
 }
