--- a/sass/_section-services.scss
+++ b/sass/_section-services.scss
@@ -1,3 +1,5 @@
+@use 'mixins';
+
 .services{
     position: relative;
     padding-bottom: 60px;
@@ -148,11 +150,11 @@ width: 100%;
 
 @media(min-width: 1920px) {
     .wrapper{
-        padding-left: 160px;
-        padding-right: 160px;
+        padding: 0;
         width: 1600px;
         margin-left: auto;
         margin-right: auto;
+        
 
         .red {
             color:  #F0145A;
