--- a/sass/_section-partners.scss
+++ b/sass/_section-partners.scss
@@ -185,8 +185,10 @@
 
 @media(min-width: 1920px){
     .partners{
+
         .wrapper-partners{
             padding: 0;
+            padding-bottom: 60px;
             width: 1720px;
             margin-left: auto;
             margin-right: auto;
