--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,3 +3,4 @@
 @use '../sass/section-services';
 @use '../sass/section-partners';
 @use '../sass/section-team';
+@use '../sass/section-publications';
