--- a/sass/_section-partners.scss
+++ b/sass/_section-partners.scss
@@ -1,4 +1,5 @@
 @use 'mixins';
+@import 'maps';
 
 .wrapper-partners{
     margin: 0;
@@ -12,7 +13,7 @@
 
     h3{
         color: #323264;
-        font-size: 14px;
+        font-size: map-get($fonts, 'title-link');
         font-weight: 700;
         letter-spacing: 1px;
         text-transform: uppercase;
