--- a/sass/_section-services.scss
+++ b/sass/_section-services.scss
@@ -1,4 +1,6 @@
 @use 'mixins';
+@import 'maps';
+@import '../sass/title-bloc';
 
 .services{
     position: relative;
@@ -39,45 +41,6 @@
     }
 }   
 
-
-.title-bloc{
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
-
-    .title-link{
-        display: flex;
-        align-items: center;
-        width: fit-content;
-        column-gap: 2px;
-        text-decoration: none;
-        font-size: 14px;
-        color:  #24A3FF;
-        font-weight: 700;
-        letter-spacing: 1px;
-        text-transform: uppercase;
-
-        &::after{
-            content: '';
-            margin: 0;
-            background: url(../images/Arrow-right.svg);
-            background-position: center;
-            width: 12px;
-            height: 12px;
-        }
-    }
-
-    .title-text{
-        margin: 0;
-        font-size: 30px;
-        font-weight: 700;
-        background: linear-gradient(90deg, #F0145A 0.84%, #EF8080 99.96%);
-        background-clip: text;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-    }
-}
-
 .services-menu{
     display: flex;
     flex-wrap: wrap;
@@ -99,7 +62,7 @@ width: 100%;
 
         .service-item-title{
             margin: 0;
-            font-size: 22px;
+            font-size:  map-get($fonts, 'service-item-title');
             font-weight: 700;
             color:  #24A3FF;
         }
@@ -107,7 +70,7 @@ width: 100%;
         .service-item-description{
             margin: 0;
             color: #FFFFFF;
-            font-size: 16px;
+            font-size:  map-get($fonts, 'service-item-description');
             font-weight: 400;
             line-height: 26px; 
         }
@@ -135,7 +98,7 @@ width: 100%;
 
     .title-bloc{
         .title-text{
-            font-size: 38px;
+            font-size:  map-get($fonts, 'title-text-grand');
         }
     }
 }
