--- a/sass/_section-partners.scss
+++ b/sass/_section-partners.scss
@@ -12,7 +12,7 @@
     align-items: center;
 
     h3{
-        color: #323264;
+        color: map-get($font-colors, 'partners-title');
         font-size: map-get($fonts, 'title-link');
         font-weight: 700;
         letter-spacing: 1px;
