--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,3 +5,5 @@
 @use '../sass/section-partners';
 @use '../sass/section-team';
 @use '../sass/section-publications';
+@use '../sass/section-experience';
+
