--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,6 @@ footer {
 @media (min-width: 768px) {
   .homepage {
     gap: 60px;
-    align-items: center;
   }
 }
 .title-bloc {
@@ -567,7 +566,6 @@ footer {
 .experience-menu .experience-menu-container {
   display: flex;
   gap: 30px;
-  padding-right: 30px;
   flex-shrink: 0;
 }
 .experience-menu .experience-menu-container a {
@@ -632,6 +630,7 @@ footer {
 @media (min-width: 1024px) {
   .experience-bloc {
     flex-direction: row;
+    align-items: center;
   }
   .experience-bloc .experience-menu {
     overflow-x: visible;
@@ -645,7 +644,7 @@ footer {
   }
   .experience-bloc .separated-line {
     width: 4px;
-    height: inherit;
+    height: 303px;
   }
 }
 @media (min-width: 1920px) {
