--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -6,6 +6,7 @@
         display: inline-block;
         border-radius: 24px;
         background: var(--basic-white, #FFF);
+        position: relative;
 
         img{
             width: 64px;
