Hero section done

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,4 +6,4 @@
 @use '../sass/section-team';
 @use '../sass/section-publications';
 @use '../sass/section-experience';
-
+@use '../sass/section-homepage';
