--- a/css/style.css
+++ b/css/style.css
@@ -653,5 +653,340 @@ footer {
     width: 1360px;
   }
 }
+.header {
+  position: relative;
+}
+@media (min-width: 1920px) {
+  .header {
+    margin-left: auto;
+    margin-right: auto;
+    width: 1920px;
+  }
+}
+.header .head-mobile {
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+}
+.header .head-desktop {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  padding-top: 50px;
+  padding-right: 60px;
+  padding-bottom: 0;
+  padding-left: 60px;
+}
+.header .head-desktop .logo {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+.header .head-desktop .desktop-contacts-languages a.contacts {
+  color: #FFF;
+  text-align: right;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-decoration: none;
+  display: flex;
+}
+.header .head-desktop .desktop-contacts-languages a.facebook {
+  width: 24px;
+  height: 24px;
+}
+.header .head-desktop .desktop-contacts-languages a.facebook:hover svg path {
+  fill: #F0145A;
+}
+.header .head-desktop nav {
+  display: flex;
+  gap: 15px;
+}
+.header .head-desktop nav a {
+  color: #FFF;
+  text-align: right;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-decoration: none;
+}
+.header .head-desktop nav a:hover {
+  color: #F0145A;
+}
+@media (min-width: 768px) {
+  .header .head-desktop .header .head-desktop {
+    display: flex;
+  }
+}
+@media (min-width: 1024px) {
+  .header .head-desktop {
+    align-items: flex-end;
+    gap: 15px;
+  }
+  .header .head-desktop .logo {
+    position: absolute;
+    left: 60px;
+    top: 50px;
+  }
+}
+@media (min-width: 1920px) {
+  .header .head-desktop {
+    width: 1920px;
+    padding-right: 160px;
+    padding-left: 160px;
+    left: 50%;
+    transform: translate(-50%);
+  }
+  .header .head-desktop .logo {
+    left: 160px;
+  }
+}
+
+.desktop-contacts-languages {
+  display: flex;
+  gap: 6px;
+  align-items: center;
+}
+.desktop-contacts-languages address {
+  color: #B3B3BA;
+  text-align: right;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  display: flex;
+}
+.desktop-contacts-languages .languages {
+  display: flex;
+}
+.desktop-contacts-languages .languages a {
+  text-decoration: none;
+  color: #FFF;
+  padding-top: 5px;
+  padding-right: 7px;
+  padding-bottom: 5px;
+  padding-left: 7px;
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  border-radius: 8px;
+}
+.desktop-contacts-languages .languages .active-page {
+  background: #F0145A;
+}
+.desktop-contacts-languages > :not(:last-child):after {
+  content: "";
+  width: 6px;
+  height: 6px;
+  border-radius: 50px;
+  background-color: #E6E6F0;
+  margin-left: 6px;
+  align-self: center;
+}
+
+.logo-section {
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+.logo-section img {
+  width: 524px;
+  height: 600px;
+  flex-shrink: 0;
+}
+.logo-section p {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 315px;
+  color: #FFF;
+  text-align: center;
+  font-size: 38px;
+  font-weight: 700;
+  padding: 0;
+  margin: 0;
+}
+.logo-section .scroll {
+  position: absolute;
+  bottom: 30px;
+}
+.logo-section .scroll:hover svg path, .logo-section .scroll:hover svg circle {
+  stroke: #F0145A;
+}
+@media (min-width: 768px) {
+  .logo-section p {
+    width: 800px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1024px) {
+  .logo-section img {
+    width: 893.277px;
+    height: 1024px;
+    flex-shrink: 0;
+  }
+}
+@media (min-width: 1024px) and (max-width: 1920px) {
+  .logo-section img {
+    width: 669.957px;
+    height: 768px;
+    flex-shrink: 0;
+  }
+}
+@media (min-width: 1920px) {
+  .logo-section img {
+    width: 872.34px;
+    height: 1000px;
+    flex-shrink: 0;
+  }
+}
+
+.contacts-languages {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 10px;
+  padding-right: 15px;
+  padding-bottom: 10px;
+  padding-left: 15px;
+  background: rgba(245, 245, 250, 0.2);
+  text-align: center;
+  color: #FFF;
+}
+.contacts-languages .languages {
+  display: flex;
+}
+.contacts-languages .languages a {
+  text-decoration: none;
+  color: #FFF;
+  padding-top: 5px;
+  padding-right: 7px;
+  padding-bottom: 5px;
+  padding-left: 7px;
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  border-radius: 8px;
+}
+.contacts-languages .languages .active-page {
+  background: #F0145A;
+}
+.contacts-languages a.contacts {
+  color: #FFF;
+  text-align: right;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-decoration: none;
+}
+
+.logo-menu {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 15px;
+  padding-right: 15px;
+  align-items: center;
+  align-self: stretch;
+}
+.logo-menu .logo-page {
+  display: flex;
+  gap: 5px;
+  padding-top: 15px;
+  padding-bottom: 10px;
+}
+.logo-menu .logo-page .logo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 3.5px;
+  width: 70px;
+  height: 32px;
+}
+.logo-menu .logo-page .slash {
+  width: 12px;
+  height: 26px;
+}
+.logo-menu .logo-page .page-selected {
+  color: #FFF;
+  font-size: 20px;
+  font-weight: 400;
+}
+.logo-menu button.menu {
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+}
+.logo-menu .menu-burger {
+  width: 32px;
+  height: 32px;
+}
+.logo-menu .menu-burger .background-menu-mobile {
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(50, 50, 100, 0.7);
+  display: none;
+}
+.logo-menu .menu-burger .background-menu-mobile .menu-mobile {
+  position: absolute;
+  bottom: 0;
+  left: 8px;
+  right: 8px;
+  background-color: #FFF;
+  border-radius: 12px 12px 0px 0px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 12px;
+}
+.logo-menu .menu-burger .background-menu-mobile .menu-mobile .close-section {
+  width: 32px;
+  height: 32px;
+  align-self: flex-end;
+}
+.logo-menu .menu-burger .background-menu-mobile .menu-mobile nav {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.logo-menu .menu-burger .background-menu-mobile .menu-mobile nav a {
+  color: #24A3FF;
+  text-align: center;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-decoration: none;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  border-radius: 12px;
+  background: #F5F5FA;
+}
+.logo-menu .menu-burger .background-menu-mobile .menu-mobile nav a:active {
+  background-color: #E6E6F0;
+}
+.logo-menu .menu-burger .background-menu-mobile .menu-mobile nav .current-page {
+  color: #F0145A;
+}
+
+@media (max-width: 767px) {
+  .header .head-desktop {
+    display: none;
+  }
+}
+@media (min-width: 768px) {
+  .header .head-mobile {
+    display: none;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
