--- a/sass/_section-homepage.scss
+++ b/sass/_section-homepage.scss
@@ -73,6 +73,8 @@ $gap: 6px;
 
                 &:hover{
                     color: #F0145A;
+                    padding-bottom: 5px;
+                    border-bottom: 2px solid #F0145A;
                 }
             }
         }
